--- a/pengertianstyle.css
+++ b/pengertianstyle.css
@@ -180,7 +180,16 @@ body {
   display: none;
 }
 
-
+body.styledarkmode{
+  background-color: black;
+  color: white;
+}
+.navbar.styledarkmode{
+  background-color: black;
+}
+.navbar.styledarkmode a{
+  color: white;
+}
 /* Responsiv */
 @media (max-width: 1440px) {
 
