--- a/pengertianstyle.css
+++ b/pengertianstyle.css
@@ -180,20 +180,18 @@ body {
   display: none;
 }
 
-body.styledarkmode{
+body.styledarkmode {
   background-color: black;
   color: white;
 }
-.navbar.styledarkmode{
+.navbar.styledarkmode {
   background-color: black;
 }
-.navbar.styledarkmode a{
+.navbar.styledarkmode a {
   color: white;
 }
 /* Responsiv */
 @media (max-width: 1440px) {
-
-
   .isi .awal,
   .isi .ketiga,
   .isi .keempat {
@@ -219,8 +217,27 @@ body.styledarkmode{
   }
 }
 /* hp */
-@media (max-width: 900px){
-
+@media (max-width: 900px) {
+  .dropdown {
+    padding: 30px 3%;
+    display: flex;
+    position: fixed;
+    margin-top: 40px;
+    background-color: white;
+    display: none;
+  }
+  .navbar {
+    padding: 20px 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    background-color: white;
+  }
   .navbar .navbar-tengah {
     display: none;
   }
@@ -230,7 +247,7 @@ body.styledarkmode{
   .isi .judul {
     font-weight: bold;
     font-size: 35px;
-    margin-top: 100px;
+    margin-top: 35px;
     margin-bottom: 15px;
   }
   .navbar .navbar-logo {
@@ -280,5 +297,4 @@ body.styledarkmode{
     object-fit: cover;
     margin-right: 10px;
   }
-
 }
