--- a/transprotasistyle.css
+++ b/transprotasistyle.css
@@ -118,13 +118,13 @@ body {
   font-weight: bold;
   margin: 0;
 }
-.penghantar{
+.penghantar {
   font-size: 20px;
   margin-top: -20px;
   margin-bottom: 20px;
   text-align: justify;
 }
-.penghantar span{
+.penghantar span {
   color: var(--primary);
   font-weight: bold;
 }
@@ -164,15 +164,14 @@ body {
   margin-bottom: 10px;
 }
 
-
-.fa-solid{
+.fa-solid {
   font-size: 23px;
 }
 
 #menu {
   display: none;
 }
-.kelima .versus{
+.kelima .versus {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -180,36 +179,74 @@ body {
   gap: 20px;
   margin-bottom: 30px;
 }
-.kelima .versus img{
+.kelima .versus img {
   max-width: 30%;
   border-radius: 30px;
-
 }
-.kelima .versus p{
+.kelima .versus p {
   font-weight: bold;
   color: black;
   font-style: italic;
   font-size: 50px;
 }
-.kelima .versus span{
+.kelima .versus span {
   font-weight: bold;
   color: var(--primary);
   font-style: italic;
   font-size: 50px;
 }
-.kelima p{
+.kelima p {
   font-size: 20px;
   text-align: justify;
 }
-
+body.styledarkmode {
+  background-color: black;
+  color: white;
+}
+.navbar.styledarkmode {
+  background-color: black;
+}
+.navbar.styledarkmode a {
+  color: white;
+}
+.kotaklinka {
+  color: black;
+}
+.kotaklinkb {
+  color: black;
+}
+.kotaklinkc {
+  color: black;
+}
+.kotaklinka.styledarkmode {
+  color: white;
+}
+.kotaklinkb.styledarkmode {
+  color: white;
+}
+.kotaklinkc.styledarkmode {
+  color: white;
+}
+.kotaklink.styledarkmode {
+  color: white;
+}
+.kotaklink.styledarkmode {
+  color: white;
+}
+.dropdown.styledarkmode {
+  background-color: black;
+}
+.dropdown.styledarkmode a {
+  color: white;
+}
 /* Responsiv */
 /* Laptop */
 @media (max-width: 1440px) {
   html {
     font-size: 85%;
   }
-  .penjelasan{
-    margin-top: 10px
+  .penjelasan {
+    margin-top: 10px;
   }
   .isi .awal,
   .isi .ketiga,
@@ -222,7 +259,7 @@ body {
   .judul {
     text-align: left;
   }
-  .isi .awal img{
+  .isi .awal img {
     justify-content: center;
     align-items: center;
     display: flex;
@@ -236,6 +273,31 @@ body {
 }
 /* hp */
 @media (max-width: 900px) {
+  /* Dropdown */
+  .dropdown {
+    padding: 30px 3%;
+    display: flex;
+    position: fixed;
+    margin-top: 80px;
+    background-color: white;
+    display: none;
+    left: 0;
+    right: 0;
+  }
+  .isidropdown {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  .isidropdown a {
+    color: black;
+    font-weight: bold;
+  }
+  .isidropdown-mode {
+    display: flex;
+    flex-direction: row;
+  }
   .navbar .navbar-tengah {
     display: none;
   }
@@ -283,17 +345,15 @@ body {
     object-fit: cover;
     margin-right: 10px;
   }
-  .kelima .versus{
+  .kelima .versus {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
   }
-  .kelima .versus img{
+  .kelima .versus img {
     max-width: 100%;
     border-radius: 30px;
-  
   }
-
 }
