--- a/transprotasistyle.css
+++ b/transprotasistyle.css
@@ -62,7 +62,7 @@ body {
   font-weight: bold;
   font-size: 45px;
   margin-top: 100px;
-  margin-bottom: 15px;
+  margin-bottom: 15px; 
 }
 
 .isi .judul span {
@@ -148,7 +148,7 @@ body {
   display: block;
   gap: 20px;
   align-items: flex-end;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
 }
 
 .isi .ketiga img {
@@ -170,6 +170,9 @@ body {
 
 #menu {
   display: none;
+}
+#menu:hover{
+  cursor: pointer;
 }
 .kelima .versus {
   display: flex;
@@ -239,6 +242,35 @@ body.styledarkmode {
 .dropdown.styledarkmode a {
   color: white;
 }
+.styledarkmode .kelima .versus p{
+  color: white;
+}
+
+/* Footer */
+footer{
+  padding: 30px 3%;
+  display: flex;
+  flex-direction: column;
+}
+.footeratas{
+  display: flex;
+  gap: 10px;
+}
+footer p{
+  font-size: 20px;
+  font-weight: bold;
+}
+footer i{
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+.styledarkmode footer i {
+  color: white; 
+}
+
+
+
 /* Responsiv */
 /* Laptop */
 @media (max-width: 1440px) {
@@ -301,13 +333,25 @@ body.styledarkmode {
   .navbar .navbar-tengah {
     display: none;
   }
+  .navbar {
+    padding: 20px 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    background-color: white;
+  }
   #menu {
     display: block;
   }
   .isi .judul {
     font-weight: bold;
     font-size: 35px;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-bottom: 15px;
   }
   .navbar .navbar-logo {
